@@ -25,6 +25,8 @@ cdir <obey$dir>.objs.signal
 cdir <obey$dir>.objs.signal.o
 cdir <obey$dir>.objs.stdio
 cdir <obey$dir>.objs.stdio.o
+cdir <obey$dir>.objs.stdlib
+cdir <obey$dir>.objs.stdlib.o
 cdir <obey$dir>.objs.string
 cdir <obey$dir>.objs.string.o
 cdir <obey$dir>.objs.sys
